hardware/pico/v0.2/readme.md


Here is information about the 2nd Beta version of CubeSatSim Pico PCB

The files here are for a single board, the CubeSatSim Pico which replaces the STEM Payload Board and the Raspberry Pi Zero.

cubesatsim-pico-0.2.G* -- All gerber files used to fabricate PCBs along with .TXT drill file

cubesatsim-pico-0.2_schematic.pdf -- Schematic

cubesatsim-pico-0.2_pcb.png -- View of board

cubesatsim-pico-0.2_pour.png -- View of board with fill

cubesatsim-main-pico-0.2_top.png -- Top view of PCB generated by gerbers

cubesatsim-main-pico-0.2_bottom.png -- Bottom view of PCB generated by gerbers

cubesatsim-main-pico-0.2_tNames.pdf -- Top outline of components

cubesatsim-main-pico-0.2_bNames.pdf -- Bottom outline of components

cubesatsim-main-pico-0.2.mnt -- top SMD component placement data

cubesatsim-main-pico-0.2.mnb -- bottom SMD component placement data

cubesatsim-main-pico-0.2_bom.csv.txt -- Bill of Materials in CSV format

I use PCBWay to fabricate PCBs https://pcbway.com

Here is a very draft bill of materials https://docs.google.com/spreadsheets/d/19K7pW-Mw8UXsktyYuREduBPz1YQKsMhOrBauL_1GCFY/edit?usp=sharing

No wiki instructions yet
