hardware/pico/v0.4/readme.md
Here is information about the 4th Beta version of CubeSatSim Pico PCB

 Changes from v0.3
 
- Fix soldermask on USB-C board
- Move Si5351 board up
- Make chip antenna longer
- Add SMD RBF
- Change analog switch SMD footprints to SOT-23-5 
- Fixed crystal pin 1 label
- Replace JP5 with a normally open pad on top with solder paste on it
- Solder resist on top of SMA for ground pins 
- VBUS on Pico to USB-C through Diode - red charging light will illuminate, RBF work except for when micro USB connected to Pico
- Camera connector mounted on PCB bottom


The files here are for a single board, the CubeSatSim Pico which replaces the STEM Payload Board and the Raspberry Pi Zero.

cubesatsim-pico-0.4.G* -- All gerber files used to fabricate PCBs along with .TXT drill file

cubesatsim-pico-0.4_schematic.pdf -- Schematic

cubesatsim-pico-0.4_pcb.png -- View of board

cubesatsim-pico-0.4_pour.png -- View of board with fill

cubesatsim-main-pico-0.4_top.png -- Top view of PCB generated by gerbers

cubesatsim-main-pico-0.4_bottom.png -- Bottom view of PCB generated by gerbers

cubesatsim-main-pico-0.4_tNames.pdf -- Top outline of components

cubesatsim-main-pico-0.4_bNames.pdf -- Bottom outline of components

cubesatsim-main-pico-0.4.mnt -- top SMD component placement data

cubesatsim-main-pico-0.4.mnb -- bottom SMD component placement data

cubesatsim-main-pico-0.4_bom.csv.txt -- Bill of Materials in CSV format

I use PCBWay to fabricate PCBs https://pcbway.com

Here is a very draft bill of materials https://docs.google.com/spreadsheets/d/1ByTG41r7f3VARUdgwTEE2agh6ibNvTtx3HnqygkxIfs/edit?usp=sharing

Draft wiki instructions: https://github.com/alanbjohnston/CubeSatSim/wiki/Pico-v0.3-Board
